[package]
name = "rust-crdt-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.5.1", features = ["csr"] }
# axum = "0.6"
# tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
# tracing = "0.1.37"
# tracing-subscriber = "0.3.17"
# thiserror = "1.0"
# time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
# serde_with = { version = "2.0", features = ["time_0_3"] }
# serde = {version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# leptos = "0.5.1"
# leptos_router = "0.5.1"
# leptos_axum = "0.5.1"
# reqwest = { version = "0.11.22", features = ["json"] }
# cfg-if = "1.0.0"

