[package]
name = "rust-crdt-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
serde_json = "1.0"
gloo-net = { version = "0.4.0", features = ["http"] }
leptos-use = "0.8.2"
common = { version = "0.1.0", path = "../common" }
# leptos_router = "0.5.2"
# reqwest = { version = "0.11.22", features = ["json"] }

