[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
serde_json = "1.0"
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
common = { version = "0.1.0", path = "../common" }
