[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }
serde_with = { version = "2.0", features = ["time_0_3"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
